--- a/src/components/Workcard.css
+++ b/src/components/Workcard.css
@@ -16,10 +16,10 @@
     padding: 1.2rem 1rem;
 }
 
-.project-cart img{
-    width:100%;
-
-
+.image{
+    background-size: cover;
+    width: 100%;
+    height: 32%;
 }
 
 .project-title{
@@ -49,6 +49,15 @@
         max-width:90%;
         margin:auto;
         grid-template-columns: 1fr;
+
+    }
+    .pro-details p{
+        padding-bottom: 1rem;
+        font-size: 0.9rem;
+        text-align: justify;
+    }
+     image{
+        width: 50%;
     }
     
 }
